add gist link slide to sypy slides

--- a/sypy_20150903/sypy_20150903.md
+++ b/sypy_20150903/sypy_20150903.md
@@ -273,6 +273,12 @@ def pymax(a, b):
   + Parallel tasks: PL/Proxy (see http://goo.gl/pCV4Q)
 
 
+## Gist of PL/Python code
+The above code plus some other functions.
+
+https://gist.github.com/lindsay-stevens-kirby/456bf4a6103d4fb966c0
+
+
 
 ## Thanks for listening
 Questions / comments?
